projects/compiler/test/parser/traitdecl_error_bad_trait.4.out
Error at %FILE_NAME%:1:22
Unexpected token '?':
  |  trait FooBar123 : Foo? {
                          ^