projects/compiler/test/parser/traitdecl_error_bad_trait.4.abra
trait FooBar123 : Foo? {

}
